Bugfix for assets not being found

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "thimssen",
+  "homepage": "https://thelvp.github.io/",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
